Bug 1340604 - Add more test code for weak map gray marking behaviour r=sfink